# popularity-tool-for-anilist

./: .dockerignore  .gitattributes  .gitignore  Dockerfile  LICENSE  README.md  anilist_api_test.py  anilist_id.txt  anime_query.gql  app.py  fetch_anime_data_by_user.py  mage_setup.sh  package-lock.json  package.json  pyproject.toml  requirements.txt  startup.py  tailwind.config.js  test.jinja  troubleshooting.py  wsgi.py
.devcontainer/: devcontainer.json
.github/workflows/: deploy-pipeline.yml  deploy-website.yml  lint.yml  main_ani-pop.yml  main_malhotra-anilist-project.yml  test.yml
app/: __init__.py  database.py  main.py  routes.py  user_count.py
app/api/: funcs.py  main.py  manga.py  plots.py
app/api_request/: fetch_anime_data_by_user.py  main.py  refactor_main.py  (+2 more)
csvs/: anime_info.csv  user_info.csv  user_score.csv
docs/: README.md
nix/: nix_requirements.txt  python-shell.nix  shell.nix
pipeline/: main.py  requirements.txt  upload_funcs.py
pipelines/: .dockerignore  Dockerfile  README.md  dagster.yaml  docker-compose.yaml  pyproject.toml  requirements.txt  setup.cfg  setup.py  workspace.yaml
refactor_app/: main.py  models.py
site/: .dockerignore  Dockerfile  docker-compose.yaml  main.py  requirements.txt
sql/: create_tables.sql
svelte-app/: ;  docker-compose.yaml  main.py  requirements.txt
templates/: dashboard.html  home.html
tests/: conftest.py  test_api.py  test_project.py
tf_deployment/: .terraform.lock.hcl  azure_deployment.tf  main.tf  variables.tf
unused/: anilist_api_test.py  fetch_user_data.py  json_structure.py
(+133 files in other folders)
