[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "popularity-tool-for-anilist"
description = "refactor"
requires-python = ">=3.9"

[project.optional-dependencies]
dev = [
  "black==24.4.0",
  "isort==5.13.2"
]

[tool.pytest.ini_options]
testpaths = [
  "./**/tests"
]
