[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "popularity-tool-for-anilist"
description = "A basic website that determines your most popular and least popular AniList scores compared to the site-wide average."
version = "1.0"
requires-python = ">=3.11"
dependencies = [
  "aiohttp==3.11.8",
  "pandas==2.2.2",
  "Requests==2.32.3",
  "azure-storage-blob==12.21.0",
  "fastapi[standard]==0.111.1",
  "fastapi-cache2==0.2.2",
  "great_expectations==0.18.19",
  "pytest==8.3.1",
  "pyarrow==18.1.0",
  "sqlalchemy==2.0.36"
]

[tool.pytest.ini_options]
testpaths = [
  "./**/tests"
]

[tool.setuptools]
py-modules = []
